maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:60: error: ';' expected but ')' found.
      if (aBiscuit(x, y)){ecritMessage(x); ecritMessagey);return y * largeur + x}
                                                        ^